# gstreamer-cpp-camera

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  config.h  gst_launch_pipeline.c  main.cpp  main.qml
example/: CMakeLists.txt  control.h  launch.cpp  launch.h  main.qml
example/audio_src_to_sink/: CMakeLists.txt  Info.plist  main.cpp
example/play_wav/: CMakeLists.txt  main.cpp
example/video_src_to_encoder/: CMakeLists.txt  main.cpp
example/video_src_to_file/: CMakeLists.txt  Info.plist  main.cpp
example/video_src_to_view/: CMakeLists.txt  main.cpp
image/: imageProvider.cpp  imageProvider.h  liveImage.cpp
image_provider/: image_provider.cpp  image_provider.h  image_provider_abstract.h  image_raw_provider.cpp  image_raw_provider.h  image_videosink.cpp  image_videosink.h  live_image.cpp
no_qt_example/: CMakeLists.txt  main.cpp
sink/: sink_audio.cpp  sink_audio.h  sink_base.cpp  sink_base.h  sink_callback.cpp  sink_callback.h  sink_encode.cpp  sink_encode.h  sink_file.cpp  sink_file.h  sink_image.cpp  sink_image.h
source/: source_app.cpp  source_app.h  source_audio.cpp  source_audio.h  source_base.cpp  source_base.h  source_decode.cpp  source_decode.h  source_device.cpp  source_device.h
source_to_sink/: play_wav.cpp  play_wav.h
utils/: codec_type.h  config.h  decoder_config.h  encoder_config.h  gst_static_plugins.cpp  gst_static_plugins.h  ivideo_device_platform.h  measure.h  source_camera_size.h  source_size.h  stringf.h
